operator/pkg/gateway-api/testdata/gateway/listenerset-hostname-conflict-wildcard/output/listenerset-ls-wildcard-a.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  creationTimestamp: null
  name: ls-wildcard-a
  namespace: gateway-conformance-infra
  resourceVersion: "999"
spec:
  parentRef:
    name: gateway-ls-wildcard-conflict
    namespace: gateway-conformance-infra
  listeners:
    - name: wildcard-listener
      port: 80
      protocol: HTTP
      hostname: "*.wildcard-hostname-conflict.com"
      allowedRoutes:
        namespaces:
          from: Same
status:
  conditions:
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: ListenerSet is accepted
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: ListenerSet is programmed
      reason: Programmed
      status: "True"
      type: Programmed
  listeners:
    - attachedRoutes: 0
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Programmed
          reason: Programmed
          status: "True"
          type: Programmed
      name: wildcard-listener
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
