operator/pkg/gateway-api/testdata/gateway/listenerset-hostname-conflict-wildcard/output/listenerset-ls-wildcard-b.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  creationTimestamp: null
  name: ls-wildcard-b
  namespace: gateway-conformance-infra
  resourceVersion: "999"
spec:
  parentRef:
    name: gateway-ls-wildcard-conflict
    namespace: gateway-conformance-infra
  listeners:
    - name: wildcard-listener
      port: 80
      protocol: HTTP
      hostname: "*.wildcard-hostname-conflict.com"
      allowedRoutes:
        namespaces:
          from: Same
status:
  conditions:
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: No valid listeners
      reason: ListenersNotValid
      status: "False"
      type: Accepted
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: No valid listeners
      reason: ListenersNotValid
      status: "False"
      type: Programmed
  listeners:
    - attachedRoutes: 0
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener has a conflict
          reason: HostnameConflict
          status: "False"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener has a conflict
          reason: HostnameConflict
          status: "False"
          type: Programmed
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener has a conflict
          reason: HostnameConflict
          status: "True"
          type: Conflicted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      name: wildcard-listener
